# exercises_for_11.3

./: pyproject.toml  pyproject.txt
chapter2_tests/: exercise1.py  exercise2.py  exercise3.py  exercise4.py  exercise5.py  exercise6.py  exercise7.py  exercise8.py  exercise9.py
chapter3_generators/: exercise1.py  exercise2.py  exercise3.py  exercise4.py  exercise5.py  exercise6.py  exercise7.py  exercise8.py  exercise9.py
chapter4_decorators/: exercise1.py  exercise2.py  exercise3.py  exercise4(tracers).py  exercise5(tracers).py  exercise6.py  exercise7.py  exercise8.py  exercise9.py
exercise1_functions/: exercise1.py  exercise2.py
functions/: exercise3.py  exercise4.py  exercise5.py  functions_tasks.py
tests/: conftest.py  test_ch2_exercise1.py  test_ch2_exercise2.py  test_ch2_exercise3.py  test_ch2_exercise4.py  test_ch2_exercise5.py  test_ch2_exercise6.py  test_ch2_exercise7.py  test_ch2_exercise8.py  test_ch2_exercise9.py
