[project]
name = "11-3-add-projects"
version = "0.1.0"
description = ""
authors = [
    {name = "Gammpyr",email = "malak93@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "11"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
